# text

./: CMakeLists.txt  main.cpp  showwidget.cpp  showwidget.h  test.txt  text.cpp  text.h
